# jaffleshop

./: .gitignore  .mise.toml  Makefile  Procfile  dbt_project.yml  profiles.yml  pyproject.toml
.github/workflows/: dev-pipeline.yml  main.yml  mataplane.yaml  metaplane-pr-test.yml  metaplane.yml
models/incremental/: src_orders.sql  src_tweets.sql
models/marts/: customers.sql  locations.yml  metricflow_time_spine.yml  order_items.sql  orders.sql  products.yml  supplies.yml
models/staging/: __sources.yml  stg_customers.sql  stg_order_items.sql
