[project]
name = "jaffleshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-duckdb>=1.9.3",
    "dbt-snowflake>=1.9.0",
    "jafgen>=0.4.14",
    "pre-commit>=4.2.0",
    "recce>=1.3.0",
    "sqlfluff>=3.4.0",
    "sqlfluff-templater-dbt>=3.4.0",
]
